# LeanAI

./: README.md
LeanAI/: Makefile  (+3 more)
Project/: .gitignore  LICENSE  Makefile  README.md  docker-compose.yml  features.py  pixi.toml  plots.py  pyproject.toml  requirements.txt
Project/EDA/: README.md  eda_acaw_extended.ipynb  eda_aw.ipynb  eda_for_extended_dataset.ipynb  eda_ib.ipynb  eda_your_initials.ipynb  single_feature_bodyfat_model.pkl
Project/api/: README.md  main.py
Project/api/templates/: form.html
Project/docker/: Dockerfile.api  Dockerfile.jupyter  Dockerfile.train
Project/docs/: mkdocs.yml
Project/mlops/: README.md  pixi.toml  setup.py
Project/mlops/.metaflowconfig/: config.json
Project/mlops/dashboards/: eda_dashboard.py  prediction_dashboard.py
Project/mlops/features/: bmi.yaml  forearm_to_biceps.yaml  waist_to_height.yaml  waist_to_hip.yaml
Project/mlops/infra/: local_setup.tf
Project/mlops/models/: female_model.pkl  male_model.pkl
Project/mlops/reports/: Combined_Model_drift_report.html  Combined_Model_regression_perf.html  Male_Model_regression_perf.html  Male_Model_target_drift.html  data_drift_template.html  regression_performance_template.html  target_drift_template.html
Project/mlops/scripts/: bootstrap_project.py  register_features.py  run_fastapi.sh  run_mlflow.sh  setup_folders.py  train_and_log_mlflow.py
Project/modeling/: predict.py  train.py
Project/models/: bodyfat_model_ib.pkl  model.pkl  model_1.pkl
Project/notebooks/: app.py  bodyfat_model.pkl  model_evaluation_results.csv  selected_features_for_modeling.csv
(+525 files in other folders)
