[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "leanai"
version = "0.0.1"
description = "Final Project"
authors = [
  { name = "[\"Alejandro Castellanos \u003ck2jac9@users.noreply.github.com\u003e\" UofT-DSI Team-17 ]" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License"
]
requires-python = "~=3.12.9"


[tool.ruff]
line-length = 99
src = ["leanai"]
include = ["pyproject.toml", "leanai/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["leanai"]
force-sort-within-sections = true

